# task_manager

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  NOTICE  README.md  package.xml  pyproject.toml
.github/workflows/: build_release.yaml  run_pipeline.yaml
docker/: Dockerfile  docker-compose.yaml
docker/nav2_example/: Dockerfile  docker-compose.yaml
docker/nav2_example/gazebo_init/: README.md
docker/task_manager/: Dockerfile  docker-compose.yaml  ros_entrypoint.sh
examples/: README.md  send_mission_request.py  send_task_request.py
launch/: task_manager.launch.py
nav2_docker/: Dockerfile  docker-compose.yaml
task_manager/: CMakeLists.txt  active_tasks.py  mypy.ini  package.xml  task_client.py  task_details.py  task_manager_node.py  task_registrator.py  task_specs.py
task_manager/examples/: README.md  nav2_example.py  send_mission_request.py  send_task_request.py  track_active_tasks.py
task_manager/launch/: task_manager.launch.py
task_manager/params/: nav2_example.yaml  task_manager_defaults.yaml  task_manager_example.yaml
task_manager/task_manager/: active_tasks.py  task_client.py  task_details.py  task_manager_node.py  task_registrator.py  task_specs.py
task_manager/task_manager/tasks/: mission.py  system_tasks.py  task_action_server.py  task_service_server.py
task_manager/tasks/: __init__.py  mission.py  system_tasks.py  task_action_server.py
task_manager/test/: test_active_tasks.py  test_mission.py  test_task_action_server.py  test_task_clients.py  test_task_registrator.py
task_manager/test/integration_tests/: mock_servers.py  task_manager_test_utils.py  test_action_task_client.py  test_mission_integration.py  test_service_task_client.py  test_system_tasks.py  test_task_manager.py
task_manager_msgs/: CMakeLists.txt  package.xml
task_manager_msgs/action/: ExecuteTask.action  Mission.action  Wait.action
task_manager_msgs/msg/: ActiveTask.msg  ActiveTaskArray.msg  SubtaskGoal.msg  SubtaskResult.msg  TaskDoneResult.msg  TaskStatus.msg
task_manager_msgs/srv/: CancelTasks.srv
test/: test_active_tasks.py  test_mission.py  test_task_clients.py  test_task_registrator.py
test/integration_tests/: mock_servers.py  task_manager_test_utils.py  test_action_task_client.py  test_mission_integration.py  test_service_task_client.py  test_system_tasks.py  test_task_manager.py
